--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Order Summary Component</title>
-</head>
-<body>
-
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Order Summary Component</title>
+  </head>
+  <body>
+    <div class="card">
+      <img class="img" src="img/illustration-hero.svg" alt="hero-image" />
+      <div class="container">
+        <h2 class="title">Order Summery</h2>
+        <p class="text">
+          You can now listen to millions of songs, audiobooks, and
+          podcasts on any device anywhere you like!
+        </p>
+      </div>
+    </div>
+  </body>
 </html>
