--- a/index.html
+++ b/index.html
@@ -9,13 +9,25 @@
   </head>
   <body>
     <div class="card">
-      <img class="img" src="img/illustration-hero.svg" alt="hero-image" />
+      <img src="/img/illustration-hero.svg" alt="hero-image" class="img" />
+
       <div class="container">
-        <h2 class="title">Order Summery</h2>
-        <p class="text">
-          You can now listen to millions of songs, audiobooks, and
-          podcasts on any device anywhere you like!
+        <h2 class="title">Order Summary</h2>
+        <p class="description">
+          You can now listen to millions of songs, audiobooks, and podcasts on
+          any device anywhere you like!
         </p>
+        <div class="plan-container">
+           <img src="/img/icon-music.svg" alt="icon-music">
+           <div class="plan-description">
+              <strong>Annual Plan</strong>
+              <p>$59.999/year</p>
+           </div>
+              <a href="#">Change</a>
+        </div>
+
+        <button class="proceed-button">Proceed to Payment</button>
+        <button class="cancel-button">Cancel Order</button>
       </div>
     </div>
   </body>
